test_suite/alan-2022-examples/failing/001040_mutation.alan
source Q82 begin boolean d686 boolean relax end
